examples/VMs2PODs/back-end.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb 
  namespace: ${NAMESPACE} 
  labels:
    app: mariadb 
spec:
  containers:
  - name: mariadb
    image: mariadb/server:10.1.37
    resources:
      limits:
        cpu: 10m
        memory: 100Mi
      requests:
        cpu: 8m
        memory: 90Mi
    ports:
        - containerPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service-lb
  namespace: ${NAMESPACE} 
spec:
  type: LoadBalancer 
  ports:
  - name: mariadb
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mariadb
