examples/VMs2PODs/front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-fpm-deployment
  namespace: ${NAMESPACE}
  labels:
    app: php-fpm
spec:
  strategy:
    type: Recreate
  replicas: 1 
  selector:
    matchLabels:
      app: php-fpm
  template:
    metadata:
      labels:
        app: php-fpm
    spec:
      containers:
      - name: php-fpm
        image: ${LIBRARY}/acme-php-fpm
        resources:
          limits:
            cpu: 200m 
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 9000

---
kind: Service
apiVersion: v1
metadata:
  name: php-fpm-service
  namespace: ${NAMESPACE} 
spec:
  type: ClusterIP
  ports:
  - name: php-fpm 
    port: 9000 
    protocol: TCP
    targetPort: 9000 
  selector:
    app: php-fpm 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: ${NAMESPACE} 
  labels:
    app: nginx
spec:
  strategy:
    type: Recreate
  replicas: 1 
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: ${LIBRARY}/acme-nginx:latest 
        resources:
          limits:
            cpu: 200m 
            memory: 500Mi
          requests:
            cpu: 100m 
            memory: 100Mi
        ports:
        - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: ${NAMESPACE} 
spec:
  type: LoadBalancer 
  ports:
  - name: nginx 
    port: 80 
    protocol: TCP
    targetPort: 80 
  selector:
    app: nginx
